add search https port

--- a/templates/default/cleanspeak.properties.erb
+++ b/templates/default/cleanspeak.properties.erb
@@ -42,6 +42,7 @@ cleanspeak-management-interface.http-port=<%= @tomcat_config['cleanspeak-managem
 cleanspeak-management-interface.https-port=<%= @tomcat_config['cleanspeak-management-interface.https-port'] %>
 cleanspeak-search-engine.transport-port=<%= @tomcat_config['cleanspeak-search-engine.transport-port'] %>
 cleanspeak-search-engine.http-port=<%= @tomcat_config['cleanspeak-search-engine.http-port'] %>
+cleanspeak-search-engine.https-port=<%= @tomcat_config['cleanspeak-search-engine.https-port'] %>
 cleanspeak-webservice.management-port=<%= @tomcat_config['cleanspeak-webservice.management-port'] %>
 cleanspeak-webservice.http-port=<%= @tomcat_config['cleanspeak-webservice.http-port'] %>
 cleanspeak-webservice.https-port=<%= @tomcat_config['cleanspeak-webservice.https-port'] %>
